force-app/main/default/objects/Policy_Rule__c/Policy_Rule__c.object-meta.xml
<CustomObject>
    <label>Policy Rule</label>
    <pluralLabel>Policy Rules</pluralLabel>
    <nameField>
        <label>Rule Number</label>
        <type>AutoNumber</type>
        <displayFormat>PR-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>A single lending policy rule within a policy version. Rules are data, not code. Child of Policy_Version__c via Master-Detail.</description>
</CustomObject>