force-app/main/default/objects/Policy_Rule__c/fields/Allowed_Values__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Values__c</fullName>
    <label>Allowed Values</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated allowed values (for IN operator)</description>
</CustomField>