force-app/main/default/objects/Policy_Rule__c/fields/Fact_Field__c.field-meta.xml
<CustomField>
    <fullName>Fact_Field__c</fullName>
    <label>Fact Field</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>API name of the Borrower_Snapshot__c field to evaluate (e.g., DTI_Ratio__c, FICO_Score__c)</description>
</CustomField>