force-app/main/default/objects/Policy_Rule__c/fields/Override_Justification_Required__c.field-meta.xml
<CustomField>
    <fullName>Override_Justification_Required__c</fullName>
    <label>Override Justification Required</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether exception requires written justification</description>
</CustomField>