force-app/main/default/objects/Policy_Rule__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <type>MasterDetail</type>
    <referenceTo>Policy_Version__c</referenceTo>
    <relationshipName>Policy_Rules</relationshipName>
    <relationshipLabel>Policy Rules</relationshipLabel>
    <description>Parent policy version</description>
</CustomField>