force-app/main/default/objects/Policy_Rule__c/fields/Regulatory_Citation__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Citation__c</fullName>
    <label>Regulatory Citation</label>
    <type>Text</type>
    <length>255</length>
    <description>Regulatory reference (e.g., 12 CFR 1026.43(e))</description>
</CustomField>