force-app/main/default/objects/Policy_Rule__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <label>Rule Category</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Rule domain</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Income</fullName><default>false</default><label>Income</label></value>
            <value><fullName>Credit</fullName><default>false</default><label>Credit</label></value>
            <value><fullName>Collateral</fullName><default>false</default><label>Collateral</label></value>
            <value><fullName>Employment</fullName><default>false</default><label>Employment</label></value>
            <value><fullName>Residency</fullName><default>false</default><label>Residency</label></value>
            <value><fullName>Debt</fullName><default>false</default><label>Debt</label></value>
            <value><fullName>Documentation</fullName><default>false</default><label>Documentation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>