force-app/main/default/objects/Policy_Rule__c/fields/Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Rule_Code__c</fullName>
    <label>Rule Code</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <description>Machine-readable rule code, unique within version (e.g., DTI_MAX, FICO_MIN, LTV_MAX)</description>
</CustomField>