force-app/main/default/objects/Policy_Rule__c/fields/Rule_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Rule_Explanation__c</fullName>
    <label>Rule Explanation</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Plain-language explanation for findings and adverse notices</description>
</CustomField>