force-app/main/default/objects/Policy_Rule__c/fields/Rule_Label__c.field-meta.xml
<CustomField>
    <fullName>Rule_Label__c</fullName>
    <label>Rule Label</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Human-readable rule name (e.g., Maximum DTI Ratio)</description>
</CustomField>