force-app/main/default/objects/Policy_Rule__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Consequence of failure</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hard_Decline</fullName><default>false</default><label>Hard Decline</label></value>
            <value><fullName>Soft_Decline</fullName><default>false</default><label>Soft Decline</label></value>
            <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
            <value><fullName>Info</fullName><default>false</default><label>Info</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>