force-app/main/default/objects/Policy_Rule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Deterministic evaluation order within a Policy_Version__c. Pins the sequence in which rules are fetched and evaluated so that replaying the same Audit_Case__c against the same Policy_Version__c always produces Replay_Check__c records in an identical order. Nulls sort last and fall back to Rule_Code__c ASC.</description>
    <inlineHelpText>Lower numbers evaluate first. Leave blank to fall back to alphabetical Rule Code ordering.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>