force-app/main/default/objects/Policy_Rule__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
    <required>true</required>
    <description>Primary threshold value</description>
</CustomField>